Fix T94115: Selecting current action in undo history undoes all

When selecting the current undo step there is no need to do anything.

Fix and minor refactor to de-duplicate refreshing after running
undo/redo & undo history.